--- a/app/src/main/res/layout/activity_map_view.xml
+++ b/app/src/main/res/layout/activity_map_view.xml
@@ -7,7 +7,7 @@
     tools:context=".MapViewActivity">
 
     <fragment
-        android:id="@+id/mapView"
+        android:id="@+id/mapFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:name="com.google.android.gms.maps.SupportMapFragment"
